commit translated contents

--- a/articles/governance/blueprints/index.yml
+++ b/articles/governance/blueprints/index.yml
@@ -12,7 +12,7 @@ metadata:
   ms.date: 06/29/2020
   ms.openlocfilehash: 04c99d2428bd3c92187ce9383f51d38a9729d22a
   ms.sourcegitcommit: f684589322633f1a0fafb627a03498b148b0d521
-  ms.translationtype: 
+  ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 07/06/2020
   ms.locfileid: "85969373"
