--- a/articles/search/index.yml
+++ b/articles/search/index.yml
@@ -13,7 +13,7 @@ metadata:
   ms.date: 02/25/2020
   ms.openlocfilehash: f5acb693e758d3a574b799b2999e6d956aaf883c
   ms.sourcegitcommit: 845a55e6c391c79d2c1585ac1625ea7dc953ea89
-  ms.translationtype: 
+  ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 07/05/2020
   ms.locfileid: "85954496"
