--- a/articles/site-reliability-engineering/index.yml
+++ b/articles/site-reliability-engineering/index.yml
@@ -13,7 +13,7 @@ metadata:
   ms.date: 02/18/2020
   ms.openlocfilehash: e5c1ef5e84f0170927d7fcac65b594d44ed33b93
   ms.sourcegitcommit: 877491bd46921c11dd478bd25fc718ceee2dcc08
-  ms.translationtype: 
+  ms.translationtype: HT
   ms.contentlocale: zh-CN
   ms.lasthandoff: 07/01/2020
   ms.locfileid: "85833428"
