--- a/articles/service-fabric/toc.yml
+++ b/articles/service-fabric/toc.yml
@@ -90,7 +90,7 @@
           href: service-fabric-tutorial-standalone-install-an-application.md
         - name: 4- 清理群集和删除基础结构
           href: service-fabric-tutorial-standalone-clean-up.md
-- name: 最佳做法
+- name: 最佳实践
   items:
     - name: Service Fabric 最佳做法概述
       href: service-fabric-best-practices-overview.md
@@ -143,6 +143,9 @@
           href: cluster-security-certificates.md
         - name: Service Fabric 中的证书管理
           href: cluster-security-certificate-management.md
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
         - name: Azure 安全基准的安全基线
           href: security-baseline.md
     - name: 术语
