--- a/articles/logic-apps/toc.yml
+++ b/articles/logic-apps/toc.yml
@@ -49,8 +49,13 @@
       href: connect-virtual-network-vnet-isolated-environment-overview.md
     - name: 业务连续性和灾难恢复
       href: business-continuity-disaster-recovery-guidance.md
-    - name: 安全基线
-      href: security-baseline.md
+    - name: 安全性
+      items:
+        - name: Azure Policy 的安全控件
+          displayName: 'regulatory, compliance, standards, domains'
+          href: ./security-controls-policy.md
+        - name: 安全基线
+          href: security-baseline.md
 - name: 操作指南
   items:
     - name: 开发
