--- a/articles/azure-cache-for-redis/TOC.yml
+++ b/articles/azure-cache-for-redis/TOC.yml
@@ -72,7 +72,9 @@
           href: cache-how-to-geo-replication.md
         - name: 借助预留容量节省资金
           href: cache-reserved-pricing.md
-        - name: 从托管缓存服务迁移
+        - name: 迁移到 Azure Cache for Redis
+          href: cache-migration-guide.md
+        - name: 从托管缓存服务（已弃用）迁移
           href: cache-migrate-to-redis.md
     - name: 自动化
       items:
