--- a/articles/governance/policy/toc.yml
+++ b/articles/governance/policy/toc.yml
@@ -228,6 +228,8 @@
           href: /azure/templates/microsoft.authorization/policysetdefinitions
 - name: 资源
   items:
+    - name: 已知问题
+      href: 'https://github.com/azure/azure-policy#known-issues'
     - name: GitHub - Azure Policy 示例
       href: 'https://github.com/Azure/azure-policy'
     - name: GitHub - 社区策略存储库
@@ -246,8 +248,8 @@
           href: 'https://www.youtube.com/watch?v=fbZBaxcjA-Y'
         - name: 修正任务
           href: 'https://www.youtube.com/watch?v=URE4DUYMgmg'
-    - name: 视频 - Build 2018
-      href: 'https://channel9.msdn.com/events/Build/2018/THR2030'
+    - name: 视频 - Ignite 2019
+      href: 'https://myignite.techcommunity.microsoft.com/sessions/81584?source=sessions'
     - name: Azure 路线图
       href: 'https://azure.microsoft.com/roadmap/'
     - name: 定价计算器
