--- a/articles/storage/tables/TOC.yml
+++ b/articles/storage/tables/TOC.yml
@@ -127,11 +127,11 @@
               href: ../common/storage-network-security.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
             - name: 需要安全传输
               href: ../common/storage-require-secure-transfer.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-            - name: 配置传输层安全性 (TLS)
+            - name: 管理传输层安全性 (TLS)
               items:
-                - name: 为存储帐户配置最低 TLS 版本
+                - name: 为传入请求强制执行最低 TLS 版本
                   href: ../common/transport-layer-security-configure-minimum-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
-                - name: 为客户端应用程序配置 TLS
+                - name: 为客户端应用程序配置 TLS 版本
                   href: ../common/transport-layer-security-configure-client-version.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
     - name: 管理数据冗余
       items:
@@ -151,7 +151,7 @@
           href: 'https://docs.microsoft.com/previous-versions/azure/storage/storage-use-azcopy'
         - name: Linux 上的 AzCopy (v8)
           href: 'https://docs.microsoft.com/previous-versions/azure/storage/storage-use-azcopy-linux'
-    - name: 疑难解答
+    - name: 故障排除
       items:
         - name: 延迟问题
           href: ../common/troubleshoot-latency-storage-analytics-logs.md?toc=%2fazure%2fstorage%2ftables%2ftoc.json
