--- a/articles/digital-twins/TOC.yml
+++ b/articles/digital-twins/TOC.yml
@@ -66,6 +66,8 @@
           href: how-to-create-azure-function.md
         - name: 查询孪生图
           href: how-to-query-graph.md
+        - name: 查看 Azure Monitor 中的指标
+          href: how-to-view-metrics.md
     - name: 连接输入
       items:
         - name: 从 IoT 中心引入遥测数据
@@ -80,6 +82,8 @@
           href: how-to-integrate-time-series-insights.md
     - name: 疑难解答
       items:
+        - name: 启用诊断日志
+          href: troubleshoot-diagnostics.md
         - name: 已知问题
           href: troubleshoot-known-issues.md
         - name: 问题解决方法
